Premieres modifs visuelles

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,4 +1,5 @@
 <footer>
-    <br />
-    Footer
+    <div class="footer navbar-fixed-bottom">
+        <p style="text-align: center">Footer</p>
+    </div>
 </footer>
