--- a/src/CoreBundle/Resources/public/css/main.css
+++ b/src/CoreBundle/Resources/public/css/main.css
@@ -1,4 +1,3 @@
-body {
-    background-image: url("../../../bundles/core/img/fond.jpg");
-    background-repeat: no-repeat;
+html{
+    Margin-top: -40px;
 }
