--- a/src/SuperAdminBundle/Resources/views/layout.html.twig
+++ b/src/SuperAdminBundle/Resources/views/layout.html.twig
@@ -2,7 +2,9 @@
 
 {% block body %}
 
-    <p>Superadmin</p>
+    <div class="alert alert-success">
+        Vous êtes connecté en tant que <strong>SuperAdmin</strong>
+    </div>
     {% block page %}
     {% endblock %}
 {% endblock %}
