--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,4 +1,6 @@
 <header>
-    Header
+    <div class = "page-header" style="background-color: #7F223C">
+        <img src="{{ asset('bundles/core/img/logo.png') }}" class="img-responsive" style="width: 20%; margin-left: auto; margin-right: auto" />
+    </div>
     {{ include("::nav.html.twig") }}
 </header>
