--- a/src/TripBundle/Resources/views/Admin/admin_index.html.twig
+++ b/src/TripBundle/Resources/views/Admin/admin_index.html.twig
@@ -7,7 +7,7 @@
     <div>
         <h3>Mes voyages</h3>
         {% if trips|length > 0 %}
-            <table>
+            <table class="table table-striped">
                 <tr>
                     <td><b>Titre</b></td>
                     <td><b>Statut</b></td>
