--- a/app/Resources/views/Tool/message_flash.html.twig
+++ b/app/Resources/views/Tool/message_flash.html.twig
@@ -1,17 +1,23 @@
-<p>
-    {% for message in app.session.flashbag.get('error') %}
-        <p>Message erreur (rouge) : {{ message }}</p>
-    {% endfor %}
+{% for message in app.session.flashbag.get('error') %}
+    <div class="alert alert-danger">
+        <p>{{ message }}</p>
+    </div>
+{% endfor %}
 
     {% for message in app.session.flashbag.get('warning') %}
-        <p>Message warning (orange) : {{ message }}</p>
+        <div class="alert alert-warning">
+            <p>{{ message }}</p>
+        </div>
     {% endfor %}
 
     {% for message in app.session.flashbag.get('valid') %}
-        <p>Message valide (vert) : {{ message }}</p>
+        <div class="alert alert-success">
+            <p>{{ message }}</p>
+        </div>
     {% endfor %}
 
     {% for message in app.session.flashbag.get('info') %}
-        <p>Message info (bleu) : {{ message }}</p>
+        <div class="alert alert-info">
+            <p>Message info (bleu) : {{ message }}</p>
+        </div>
     {% endfor %}
-</p>
