--- a/src/SuperAdminBundle/Resources/views/Security/login.html.twig
+++ b/src/SuperAdminBundle/Resources/views/Security/login.html.twig
@@ -9,27 +9,28 @@
 
     {# Le formulaire, avec URL de soumission vers la route « login_check » comme on l'a vu #}
 
-        <input type="submit" value="Connexion" />
-
-<form action="{{ path('superadmin_login_check') }}" method="post">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-offset-5 col-md-3">
-                <div class="form-login">
-                    <input type="text" id="userName" name="_username" class="form-control input-sm chat-input" placeholder="username" value="{{ superadmin_login }}"/>
-                    </br>
-                    <input type="password" id="password" name="_password" class="form-control input-sm chat-input" placeholder="password" value="{{ last_username }}" />
-                    </br>
-                    <div class="wrapper">
+    <form action="{{ path('superadmin_login_check') }}" method="post">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-5 col-md-3">
+                    <div class="form-login">
+                        <input type="hidden" id="userName" name="_username" class="form-control input-sm chat-input"
+                               placeholder="username" value="{{ superadmin_login }}"/>
+                        <label for="password">Mot de passe superadmin :</label>
+                        </br>
+                        <input type="password" id="password" name="_password" class="form-control input-sm chat-input"
+                               placeholder="password" value="{{ last_username }}"/>
+                        </br>
+                        <div class="wrapper">
             <span class="group-btn">
                 <input type="submit" value="Connexion" class="btn btn-primary btn-md"/>
             </span>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
-    </div>
-</form>
+    </form>
 
 {% endblock %}
