--- a/src/SuperAdminBundle/Resources/views/TripManager/trip_manager.html.twig
+++ b/src/SuperAdminBundle/Resources/views/TripManager/trip_manager.html.twig
@@ -4,56 +4,57 @@
 
 
 {% block page %}
-    <a href="{{ path('superadmin_trip_add') }}">
+    <a role="button" class="btn btn-primary" style="margin-bottom: 10px" href="{{ path('superadmin_trip_add') }}">
         Ajouter un voyage
     </a>
     {% if trips|length > 0 %}
-
-        <table>
-            <tr>
-                <td><b>Titre</b></td>
-                <td><b>Statut</b></td>
-                <td><b>Ouverture au public</b></td>
-                <td><b>Date de début</b></td>
-                <td><b>Date de fin</b></td>
-                <td><b>Lieux</b></td>
-                <td><b>Edit</b></td>
-                <td><b>Gérer les admins</b></td>
-                <td><b>Supprimer</b></td>
-            </tr>
-            {% for trip in trips %}
+        <div class="table-responsive">
+            <table class="table table-striped">
                 <tr>
-                    <td>{{ trip.titre }}</td>
-                    <td>{{ trip.statut }}</td>
-
-                    <td>
-                        {% if trip.ouvert %}
-                            Ouvert
-                        {% else %}
-                            Fermé
-                        {% endif %}
-                    </td>
-                    <td>{{ trip.dateDebut|date("d M Y à H\\hi") }}</td>
-                    <td>{{ trip.dateFin|date("d M Y à H\\hi") }}</td>
-                    <td>{{ trip.lieux }}</td>
-                    <td>
-                        <a href="{{ path('superadmin_trip_edit', { 'id': trip.id }) }}">
-                            Edit
-                        </a>
-                    </td>
-                    <td>
-                        <a href="{{ path('superadmin_trip_roles', { 'id': trip.id }) }}">
-                            Gérer les admins
-                        </a>
-                    </td>
-                    <td>
-                        <a href="{{ path('superadmin_trip_delete', { 'id': trip.id }) }}">
-                            Supprimer
-                        </a>
-                    </td>
+                    <td><b>Titre</b></td>
+                    <td><b>Statut</b></td>
+                    <td><b>Ouverture au public</b></td>
+                    <td><b>Date de début</b></td>
+                    <td><b>Date de fin</b></td>
+                    <td><b>Lieux</b></td>
+                    <td><b>Edit</b></td>
+                    <td><b>Gérer les admins</b></td>
+                    <td><b>Supprimer</b></td>
                 </tr>
-            {% endfor %}
-        </table>
+                {% for trip in trips %}
+                    <tr>
+                        <td>{{ trip.titre }}</td>
+                        <td>{{ trip.statut }}</td>
+
+                        <td>
+                            {% if trip.ouvert %}
+                                Ouvert
+                            {% else %}
+                                Fermé
+                            {% endif %}
+                        </td>
+                        <td>{{ trip.dateDebut|date("d M Y à H\\hi") }}</td>
+                        <td>{{ trip.dateFin|date("d M Y à H\\hi") }}</td>
+                        <td>{{ trip.lieux }}</td>
+                        <td>
+                            <a href="{{ path('superadmin_trip_edit', { 'id': trip.id }) }}">
+                                Edit
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{{ path('superadmin_trip_roles', { 'id': trip.id }) }}">
+                                Gérer les admins
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{{ path('superadmin_trip_delete', { 'id': trip.id }) }}">
+                                Supprimer
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
     {% else %}
         <div class="alert alert-danger">
             <p>Pas de voyages trouvés.</p>
