--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,5 +1,11 @@
 <footer>
-    <div class="footer navbar-fixed-bottom">
-        <p style="text-align: center">Footer</p>
+
+    <div class="footer navbar-fixed-bottom" style="background-color: #7F223C">
+        <p style="color: white" align="center">
+            Projet Web - NICOLAS Bastien - Gaspard MASY - Charles AMBASSA - 4ACFA -2016
+        </p>
+
     </div>
+
 </footer>
+
