Add user form OK

--- a/src/SuperAdminBundle/Resources/views/TripManager/trip_roles.html.twig
+++ b/src/SuperAdminBundle/Resources/views/TripManager/trip_roles.html.twig
@@ -7,7 +7,8 @@
     <br />
 
     {% if trip.admins|length > 0 %}
-        <table>
+        <table class="table">
+            <thead class="thead-inverse">
             <tr>
                 <td><b>Prenom</b></td>
                 <td><b>Nom</b></td>
