--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -3,7 +3,9 @@
 {% block title %}{{ parent() }}{% endblock %}
 
 {% block body %}
-    <p>Core</p>
+    <div class = "modal-body">
+        <img src="{{ asset('bundles/core/img/voyages.jpg') }}" class="img-responsive" style="width: 50%; margin-left: auto; margin-right: auto" />
+    </div>
     {% block page %}
     {% endblock %}
 {% endblock %}
