--- a/src/CoreBundle/Resources/public/css/main.css
+++ b/src/CoreBundle/Resources/public/css/main.css
@@ -1,7 +1,16 @@
 html{
     Margin-top: -40px;
 }
-.form-group{
+.form-register {
     width:400px;
     margin:auto;
+}
+
+.form-trips {
+    width:400px;
+    margin-left: 20px;
+}
+
+body {
+    margin-bottom: 50px;
 }
