Administration des voyages

--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -23,6 +23,7 @@
                         <li><a href="{{ path('superadmin_trips') }}">Gestion des voyages</a></li>
                     {% else %}
                         <li><a href="{{ path('trip_homepage') }}">Gestion des voyages</a></li>
+                        <li><a href="{{ path('trip_admin') }}">Administration des voyages</a></li>
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav pull-right">
