Correction inscription voyage

--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -30,13 +30,14 @@
                     {% if app.user %}
                         {% if is_granted ('ROLE_SUPERADMIN') == 'true' %}
                             <li class=""><a href="{{ path('superadmin_logout') }}">Logout</a></li>
+                            <li class=""><a href="{{ path('fos_user_security_login') }}">Se connecter comme utilisateur</a></li>
                         {% else %}
                             <li class=""><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                            <li class=""><a href="{{ path('superadmin_login') }}">Se connecter comme administrateur</a></li>
                         {% endif %}
                     {% else %}
+                        <li class=""><a href="{{ path('fos_user_security_login') }}">Se connecter comme utilisateur</a></li>
                         <li class=""><a href="{{ path('superadmin_login') }}">Se connecter comme administrateur</a></li>
-                        <li class=""><a href="{{ path('fos_user_security_login') }}">Se connecter comme utilisateur</a>
-                        </li>
                     {% endif %}
                 </ul>
             </div>
