Bouton d'inscription, infos ds le README et sur l'index

--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -38,6 +38,7 @@
                     {% else %}
                         <li class=""><a href="{{ path('fos_user_security_login') }}">Se connecter comme utilisateur</a></li>
                         <li class=""><a href="{{ path('superadmin_login') }}">Se connecter comme administrateur</a></li>
+                        <li class=""><a href="{{ path('fos_user_security_register') }}">S'inscrire</a></li>
                     {% endif %}
                 </ul>
             </div>
